# realtime-transcription

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  POST.en.md  POST.it.md  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py  rooms.py  transcribe_service.py
audio_client/: __main__.py  cli.py
images/: architecture.drawio  architecture.post.drawio
static/: client.js  index.html
tests/: test_api.py  test_audio_client.py  test_rooms.py  test_transcribe.py
